darwin-rs/tui/src/chatwidget/snapshots/darwin_code_tui__chatwidget__tests__model_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Select Model
  Add models under config.toml provider models, then choose one here.

› 1. gpt-5.3-darwin-code (default)  Latest frontier agentic coding model.
  2. gpt-5.4                  Latest frontier agentic coding model.
  3. gpt-5.2-darwin-code            Frontier agentic coding model.
  4. gpt-5.1-darwin-code-max        DarwinCode-optimized flagship for deep and fast
                              reasoning.
  5. gpt-5.2                  Latest frontier model with improvements across
                              knowledge, reasoning and coding
  6. gpt-5.1-darwin-code-mini       Optimized for darwin-code. Cheaper, faster, but less
                              capable.

  Press enter to select reasoning effort, or esc to dismiss.
