darwin-rs/tui/src/chatwidget/snapshots/darwin_code_tui__chatwidget__tests__rate_limit_switch_prompt_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Approaching rate limits
  Switch to gpt-5.1-darwin-code-mini for lower credit usage?

› 1. Switch to gpt-5.1-darwin-code-mini           Optimized for darwin-code. Cheaper,
                                            faster, but less capable.
  2. Keep current model
  3. Keep current model (never show again)  Hide future rate limit reminders
                                            about switching models.

  Press enter to confirm or esc to go back
