darwin-rs/tui/src/chatwidget/snapshots/darwin_code_tui__chatwidget__tests__realtime_audio_selection_popup_narrow.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Settings
  Configure settings for Darwin-Code.

› 1. Microphone  Current: System default
  2. Speaker     Current: System default

  Press enter to confirm or esc to go back
