darwin-rs/tui/src/chatwidget/snapshots/darwin_code_tui__chatwidget__tests__renamed_thread_footer_title.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"› Ask Darwin-Code to do anything                                                      "
"                                                                                "
"  gpt-5.3-darwin-code high · Roadmap cleanup                                          "
