darwin-rs/tui/src/chatwidget/snapshots/darwin_code_tui__chatwidget__tests__replayed_interrupted_reconnect_footer_row.snap
---
source: tui/src/chatwidget/tests/history_replay.rs
expression: header
---
╭───────────────────────────────────────╮
