darwin-rs/tui/src/chatwidget/snapshots/darwin_code_tui__chatwidget__tests__slash_rename_prefilled_prompt.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: popup
---
╭───────────────────────────────────────╮
│ >_ Darwin Code (v0.0.1)         │
│                                       │
│ model:     loading   /model to change │
│ directory: /tmp/project               │
╰───────────────────────────────────────╯

▌ Rename thread
▌
▌ Current project title

Press enter to confirm or esc to go back
