darwin-rs/tui/src/chatwidget/snapshots/darwin_code_tui__chatwidget__tests__status_line_model_with_reasoning_plan_mode_footer.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"› Ask Darwin-Code to do anything                                                      "
"                                                                                "
"  gpt-5.3-darwin-code medium                          Plan mode (shift+tab to cycle)  "
